# Image-Prediction-Service

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  build.rs  config.yaml  deps_install.sh  readme.md
.github/workflows/: ci.yml  container.yml  coverage.yml  release.yml
docs/: instruction.md
proto/public/: image_predction_service.proto  image_predction_service_pb2.py  image_predction_service_pb2.pyi  image_predction_service_pb2_grpc.py  test_client.py
src/: config.rs  input.rs  logger.rs  main.rs  pb.rs  service.rs
src/proto-gen/: image_prediction.rs
src/tf_serving/: mod.rs  model_status.rs  predict_service.rs
