[package]
name = "image-prediction-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64-simd = "0.8.0"
tokio-stream = "0.1"
prost = "0.12.0"
tonic = "0.10.0"
log = "0.4.20"
clap = "4.0.29"
structopt = "0.3.20"
serde_yaml = "0.9.25"
serde = { version = "1.0.188", features = ["derive"] }
log4rs = "1.2.0"
serde_json = "1.0.105"
env_logger = "0.10.0"
reqwest = { version = "0.11.20", features = ["stream", "json"] }
anyhow = { version = "1.0.75" }
outref = "0.5.1"
async-stream = "0.3.5"

[dependencies.tokio]
version = "1.32.0"
features = ["full"]

[dev-dependencies]
mockito = { version = "0.30.0" }
tempfile = "3.8.0"

[build-dependencies]
tonic-build = "0.10.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
